# tkr

./: AUTHORS  CMakeLists.txt  README.md
src/: auxfunctions.cpp  auxfunctions.hpp  configuration.cpp  configuration.hpp  constants.hpp  identification.hpp  main.cpp  tkrparameters.cpp  tkrparameters.hpp
